--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <section class="features">
             <div class="row">
                 <div class="col-12 my-5">
-                    <h2 class="text-uppercase" >Features:</h2>
+                    <h2 class="text-uppercase">Features:</h2>
                     <hr />
                 </div>
             </div>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="feature">
-                        <h3><i class="fa-solid fa-gift"></i>"></i> Feature 2</h3>
+                        <h3><i class="fas fa-credit-card"></i> Feature 2</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                             laboris nisi ut aliquip ex ea commodo consequat.</p>
